--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,7 +25,7 @@ crawler:
 
 # 推送模式选择
 report:
-  mode: "daily" # 可选: "daily"|"incremental"|"current"
+  mode: "incremental" # 可选: "daily"|"incremental"|"current"
   rank_threshold: 5 # 排名高亮阈值
   sort_by_position_first: false # 排序优先级：true=先按配置位置排序，false=先按热点条数排序
   max_news_per_keyword: 0 # 每个关键词最大显示数量，0=不限制
@@ -48,13 +48,13 @@ notification:
   #   - 只想在工作日白天接收推送（如 09:00-18:00）
   #   - 希望在晚上固定时间收到汇总（如 20:00-22:00）
   push_window:
-    enabled: false  # 是否启用推送时间窗口控制，默认关闭
+    enabled: true  # 是否启用推送时间窗口控制，默认关闭
     # 注意：GitHub Actions 执行时间不稳定，时间范围建议至少留足 2 小时
     # 如果想要精准的定时推送，建议使用 Docker 部署在个人服务器上
     time_range:
-      start: "20:00"  # 推送时间窗口开始（北京时间）
-      end: "22:00"    # 推送时间窗口结束（北京时间）
-    once_per_day: true  # 每天在时间窗口内只推送一次，如果 false，则窗口内每次执行都推送
+      start: "09:00"  # 推送时间窗口开始（北京时间）
+      end: "20:00"    # 推送时间窗口结束（北京时间）
+    once_per_day: false  # 每天在时间窗口内只推送一次，如果 false，则窗口内每次执行都推送
     push_record_retention_days: 7  # 推送记录保留天数
 
   # ⚠️⚠️⚠️ 重要安全警告 / IMPORTANT SECURITY WARNING ⚠️⚠️⚠️
@@ -90,22 +90,8 @@ notification:
   #   • Email already supports multiple recipients (comma-separated), unchanged
   #
   webhooks:
-    feishu_url: "" # 飞书机器人的 webhook URL（多账号用 ; 分隔）
-    dingtalk_url: "" # 钉钉机器人的 webhook URL（多账号用 ; 分隔）
-    wework_url: "" # 企业微信机器人的 webhook URL（多账号用 ; 分隔）
-    wework_msg_type: "markdown" # 企业微信消息类型：markdown(群机器人) 或 text(个人微信应用)
-    telegram_bot_token: "" # Telegram Bot Token（多账号用 ; 分隔，需与 chat_id 数量一致）
-    telegram_chat_id: "" # Telegram Chat ID（多账号用 ; 分隔，需与 bot_token 数量一致）
-    email_from: "" # 发件人邮箱地址
-    email_password: "" # 发件人邮箱密码或授权码
-    email_to: "" # 收件人邮箱地址，多个收件人用逗号分隔
-    email_smtp_server: "" # SMTP服务器地址（可选，留空自动识别）
-    email_smtp_port: "" # SMTP端口（可选，留空自动识别）
-    ntfy_server_url: "https://ntfy.sh" # ntfy服务器地址，默认使用公共服务，可改为自托管地址
-    ntfy_topic: "" # ntfy主题名称（多账号用 ; 分隔）
-    ntfy_token: "" # ntfy访问令牌（可选，用于私有主题，多账号用 ; 分隔）
-    bark_url: "" # Bark推送URL（多账号用 ; 分隔，格式：https://api.day.app/your_device_key 或自建服务器地址）
-    slack_webhook_url: "" # Slack Incoming Webhook URL（多账号用 ; 分隔，格式：https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX）
+    telegram_bot_token: "8325433594:AAGR757j5DRHDN7XuHxi0L8pZqM_o5g3MUA" # Telegram Bot Token（多账号用 ; 分隔，需与 chat_id 数量一致）
+    telegram_chat_id: "447954022" # Telegram Chat ID（多账号用 ; 分隔，需与 bot_token 数量一致）
 
 # 用于让关注度更高的新闻在更前面显示，即用算法重新组合不同平台的热搜排序形成你侧重的热搜，合起来是 1 就行
 weight:
